--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     /*background: color image repeat position/size*/   /*sequencia*/
 
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
@@ -171,3 +172,14 @@ footer {
     font-size: 14px;
 
 }
+
+/* media queries */
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+ }
